--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "js-cookie": "^3.0.5",
@@ -13,6 +14,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "sockjs-client": "^1.6.1",
     "three": "^0.172.0"
   },
   "scripts": {
