--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
   "devDependencies": {
     "ajv": "^7.2.4"
   },
-  "proxy": "http://localhost:6363"
+  "proxy": "https://mylogapi.brokers-x.com"
 }
